--- a/app/src/main/res/layout/activity_staggered.xml
+++ b/app/src/main/res/layout/activity_staggered.xml
@@ -21,14 +21,16 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_staggered" />
+    <FrameLayout
+        android:id="@+id/fragment_container_scrolling"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behaviour="@string/appbar_scrolling_view_behavior"/>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+    <FrameLayout
+        android:id="@+id/fragment_container_non_scrolling"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?android:attr/actionBarSize" />
 
 </android.support.design.widget.CoordinatorLayout>
