--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/grid_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:padding="4dp"
-        android:elevation="4dp">
+        android:layout_margin="8dp"
+        android:elevation="8dp">
 
         <TextView
             android:id="@+id/chemical"
