--- a/app/src/main/res/layout/fragment_grid.xml
+++ b/app/src/main/res/layout/fragment_grid.xml
@@ -7,7 +7,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/staggered_grid_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"/>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
